[package]
name = "nanoda"
version = "0.1.2"
authors = ["ammkrn <ammkrn@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mimalloc = []
default = ["mimalloc"]

[profile.release]
opt-level=3
#lto=true
#debug = true

[dependencies]
crossbeam-utils = "0.6.6"
fxhash = "0.2.1"
hashbrown = "0.3.0"
parking_lot = "0.9.0"
structopt = "0.2.18"
mimallocator = "0.1.3"
stacker = "0.1.5"